--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,7 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-//use_access_transformer = true
+use_mixins = false
+use_coremod = false
+use_assetmover = false
+use_access_transformer = true
